<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="next_shoe">Next Shoe:</string>
    <string name="app_name">ShoeMileageTracker</string>
    <string name="last_shoe">Last Shoe:</string>
    <string name="shoe_history">Shoe History</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_name_label">Shoe Name</string>
    <string name="new_entry_title">New Activity for %s</string>
    <string name="edit_entry_title">Edit Activity for %s</string>
    <string name="save_button_text">Save</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="new_shoe_title">Enter a New Shoe</string>
    <string name="new_shoe_name">New Pair of Shoes</string>
    <string name="shoe_list_title">Current Shoes</string>
    <string name="nothing_to_save">Name too short</string>
    <string name="add_shoe_menu_text">New Shoe</string>
    <string name="show_shoes_menu_text">Shoe List</string>
    <string name="open_shoe_menu_text">Open</string>
    <string name="delete_shoe_menu_text">Delete</string>
    <string name="entry_date_label">Date</string>
    <string name="entry_distance_label">Distance</string>
    <string name="entry_shoe_menu_text">Add Run</string>
    <string name="show_entries_menu_text">Activities</string>
    <string name="entry_list_title">Activities</string>
    <string name="entry_set_date">Change Date</string>
    <string name="null_last_activity_date">No Activity</string>
    <string name="total_distance_label">Total Distance:</string>
    <string name="last_date_label">Last Use Date:</string>
    <string name="initial_distance_label">Initial Distance</string>
    <string name="max_distance_label">Max. Expected</string>
    <string name="colour_label">Colour</string>
    <string name="set_colour_button_label">Set</string>
    <string name="select_colour_dialog">Select Colour</string>
    <string name="distance_unit_preference">Distance Unit</string>
    <string name="summary_distance_unit_preference">Distances are shown in %s</string>
    <string name="dialog_title_distance_unit_preference">Select Unit</string>
    <string name="title_general_preferences">General</string>
    <string name="settings_menu_text">Settings</string>
    <string name="activity_label_preferences">Settings</string>
    <string name="open_entry_menu_text">Change</string>
    <string name="delete_entry_menu_text">Delete</string>
    <string name="title_confirm_delete_shoe">Delete Shoe</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="message_confirm_delete_shoe_many_activities">Deleting %1$s will delete %2$d associated activities.</string>
    <string name="message_confirm_delete_shoe_one_activity">Deleting %s will delete an associated activity.</string>
    <string name="message_confirm_delete_shoe">Delete %s?</string>
    <string name="retire_shoe_menu_text">Retire</string>
    <string name="unretire_shoe_menu_text">Unretire</string>
    <string name="add_entry_menu_text">Log Activity</string>
    <string name="edit_shoe_menu_text">Open Shoe</string>
    <string name="title_retire_create_new_shoe">Create Duplicate</string>
    <string name="message_retire_create_new_shoe">Would you like to create a duplicate of %s with no activity?</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="retired_shoe_display_pattern">(Retired %s)</string>
    <string name="delete_retired_menu_text">Delete Retired</string>
    <string name="title_confirm_delete_retired">Delete Retired Shoes</string>
    <string name="message_confirm_delete_retired">%d shoes will be deleted. Are you sure you would like to continue?</string>
    <string name="preference_title_show_retired_shoes">Show Retired Shoes</string>
    <string name="preference_summary_on_show_retired_shoes">The status screen will show retired shoes</string>
    <string name="preference_summary_off_show_retired_shoes">The status screen will hide retired shoes</string>
    <string name="preference_title_show_retired_activities">Show Retired Shoe Activities</string>
    <string name="preference_summary_on_show_retired_activities">The activities screen will show activities of retired shoes</string>
    <string name="preference_summary_off_show_retired_activities">The activities screen will hide activities of retired shoes</string>
    <string name="title_confirm_delete_entry">Delete Activity</string>
    <string name="message_confirm_delete_entry">Delete activity from %s</string>
    <string name="message_shoe_retired">%1$s was retired on %2$s. To add an activity, please unretire the shoe first.</string>
    <string name="next_shoe_text_widget">Next:</string>
</resources>