<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/shoe_name_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:singleLine="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/initial_distance_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/initialDistanceEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:numeric="decimal"
                android:singleLine="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/max_distance_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/maxDistanceEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:numeric="decimal"
                android:singleLine="true" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/colour_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:stretchColumns="1" >

                <TableRow
                    android:id="@+id/colourView"
                    android:paddingTop="3dp" >

                    <View
                        android:layout_width="200dp"
                        android:layout_height="fill_parent"
                        android:background="#00000000" />

                    <Button
                        android:id="@+id/pickColourButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_colour_button_label" />
                </TableRow>
            </TableLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF909090" />

            <LinearLayout android:id="@+id/shoeRetiredViewContainer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/shoeRetiredTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="#FF909090" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <pmg.android.showmileagetracker.layouts.OkCancelLayout
        android:id="@+id/okCancelLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal" >
    </pmg.android.showmileagetracker.layouts.OkCancelLayout>

</LinearLayout>